kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlvy-api
  namespace: urlvy
spec:
  type: ClusterIP
  selector:
    app: urlvy-api
  ports:
    - port: 80
      targetPort: 5001
      protocol: TCP
