kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlvy-web
  namespace: urlvy
spec:
  type: ClusterIP
  selector:
    app: urlvy-web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
